--- a/apps/templates/includes/footer-auth.html
+++ b/apps/templates/includes/footer-auth.html
@@ -4,20 +4,20 @@
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-12 col-md-6 my-auto">
             <div class="copyright text-center text-sm text-white text-lg-start">
-              &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold text-white" target="_blank">Creative Tim</a>
-              coded by AppSeed.
+              &copy; <a href="https://iamjaco.com" class="font-weight-bold text-white" target="_blank">iamjaco</a>
+              coded with care.
             </div>
           </div>
           <div class="col-12 col-md-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="https://github.com/app-generator/jinja-material-kit" class="nav-link text-white" target="_blank">Sources</a>
+                <a href="https://iamjaco.com" class="nav-link text-white" target="_blank">Sources</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us/support" class="nav-link text-white" target="_blank">Support</a>
+                <a href="https://iamjaco.com" class="nav-link text-white" target="_blank">Support</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us" class="nav-link text-white" target="_blank">AppSeed</a>
+                <a href="https://iamjaco.com" class="nav-link text-white" target="_blank">iamjaco</a>
               </li>
             </ul>
           </div>
